--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -49,7 +49,8 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	vertical-align: top;
+	box-sizing: border-box;
 }
 
 html, body {
@@ -61,4 +62,24 @@ h1, h2, h3, h4, h5 {
     font-family: 'Bangers', cursive;
     letter-spacing: 1px;
     margin-bottom: 15px;
+}
+/* my codes tarts here */
+header {
+	display: inlign-block;
+	border:1px solid red;
+}
+
+header nav {
+	display: inlign-block;
+}
+
+header nav a {
+	display:inlign-block;
+	border:1px solid navy;
+	color: gray;
+    text-decoration: none;
+}
+header .logo {
+	display: inlign-block;
+	border:1px solid green;
 }
