--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -49,7 +49,7 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-	vertical-align: top;
+	
 	box-sizing: border-box;
 }
 
@@ -61,25 +61,122 @@ html, body {
 h1, h2, h3, h4, h5 {
     font-family: 'Bangers', cursive;
     letter-spacing: 1px;
-    margin-bottom: 15px;
-}
-/* my codes tarts here */
-header {
-	display: inlign-block;
-	border:1px solid red;
+	margin-bottom: 15px;
 }
 
+.container {
+	width: 880px;
+	margin: 0 auto;
+  }
+
+/* my codes tarts here */
+
 header nav {
-	display: inlign-block;
+	display: inline-block;
+	width: 791px;
+	vertical-align:top;
+	margin-top:35px;
 }
 
 header nav a {
-	display:inlign-block;
-	border:1px solid navy;
+	display:inline-block;
 	color: gray;
-    text-decoration: none;
+	font-size: 14px;
+	text-decoration: none;
+	margin-right: 65px;
 }
+
+header nav a:hover {
+	text-decoration: underline;
+}
+
+header nav a:first-child {
+	margin-left: 0;
+}
+
+header nav a:last-child {
+	margin-right: 0;
+}
+
 header .logo {
-	display: inlign-block;
-	border:1px solid green;
+	display:inline-block;
+	margin-top: 25px;
+}
+
+.cta .cta-text {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 77px;
+	margin-top: 120px;
+	text-align: center;
+	padding: 0px 90px;
+}
+
+.cta .cta-text button {
+	background: white;
+	vertical-align: top;
+	margin-top: 6px;
+	padding: 8px 44px;
+	font-size: 17px;
+	border: 1px solid black;
+	cursor: pointer;
+}
+
+.cta img {
+	display: inline-block;
+}
+
+.main-content {
+	border-top: 1pxsolid black;
+	margin-top: 76px;
+    padding-top: 39px;
+}
+
+.main-content .top-content {
+	padding:0 10px;
+}
+
+.text-content {
+	display:inline-block;
+	width: 410px;
+	margin-right:34px;
+	
+}
+.main-content .top-content .text-content:last-child {
+	margin-right: 0;
+}
+
+.main-content .middle-img {
+	margin-top: 45px;
+}
+
+.main-content .bottom-content {
+	margin-top:37px;
+	padding: 0 10px;
+}
+
+.main-content .bottom-content .text-content {
+	width: 275px;
+	display:inline-block;
+	margin-right: 12px;
+}
+
+.main-content .bottom-content .text-content:last-child {
+	margin-right: 0;
+}
+
+.contact {
+	margin-top: 57px;
+	border-top: 1px solid black;
+	padding: 39px 10px 0;
+}
+
+.contact p {
+	margin: 20px 0;
+}
+
+footer {
+	margin: 32px 0;
+	text-align: center;
+	font-size: 14px;
 }
